langkit/sustained/src/gpr_parser-implementation-c.ads


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_reference_f_variable_name";
   

           
   

   
   

   function gpr_variable_reference_f_attribute_ref
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_reference_f_attribute_ref";
   

           
   

   
   

   function gpr_with_decl_f_is_limited
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_with_decl_f_is_limited";
   

           
   

   
   

   function gpr_with_decl_f_path_names
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_with_decl_f_path_names";
   


   ------------------------
   -- Conversion helpers --
   ------------------------

   --  The following conversion helpers are use by the various C bindings

   function Wrap (S : Source_Location) return gpr_source_location is
     ((Unsigned_32 (S.Line), Unsigned_16 (S.Column)));
   function Unwrap (S : gpr_source_location) return Source_Location is
     ((Line_Number (S.Line), Column_Number (S.Column)));

   function Wrap (S : Source_Location_Range) return gpr_source_location_range is
     ((Start_S => (Unsigned_32 (S.Start_Line), Unsigned_16 (S.Start_Column)),
       End_S   => (Unsigned_32 (S.End_Line),   Unsigned_16 (S.End_Column))));
   function Unwrap (S : gpr_source_location_range) return Source_Location_Range is
     ((Line_Number (S.Start_S.Line),
       Line_Number (S.End_S.Line),
       Column_Number (S.Start_S.Column),
       Column_Number (S.End_S.Column)));

   function Wrap (S : Unbounded_Wide_Wide_String) return gpr_text;

   function Wrap_Alloc (S : Text_Type) return gpr_text;
   function Wrap
     (S     : Text_Cst_Access;
      First : Positive;
      Last  : Natural) return gpr_text;

   function Wrap (T : Text_Cst_Access) return gpr_text is
     (if T = null
      then (Chars => System.Null_Address, Length => 0, Is_Allocated => 0)
      else (Chars => T.all'Address, Length => T.all'Length, Is_Allocated => 0));
   function Wrap (T : Text_Access) return gpr_text is
     (Wrap (Text_Cst_Access (T)));

   function Wrap_Big_Integer is new Ada.Unchecked_Conversion
     (Big_Integer_Type, gpr_big_integer);
   function Unwrap_Big_Integer is new Ada.Unchecked_Conversion
     (gpr_big_integer, Big_Integer_Type);

   --  Probably because the following conversions involve fat pointers, using
   --  the No_Strict_Aliasing pragma here has no effect. Silence the warning,
   --  since all read/writes for the pointed values are made through the "real"
   --  fat pointer (Symbol_Type) and not the fake one (gpr_symbol_type): strict
   --  aliasing issues should not happen.

   pragma Warnings (Off, "possible aliasing problem for type");
   function Wrap_Symbol is new Ada.Unchecked_Conversion
     (Symbol_Type, gpr_symbol_type);
   function Unwrap_Symbol is new Ada.Unchecked_Conversion
     (gpr_symbol_type, Symbol_Type);
   pragma Warnings (On, "possible aliasing problem for type");

   function Wrap is new Ada.Unchecked_Conversion
     (Bare_Gpr_Node, gpr_base_node);
   function Unwrap is new Ada.Unchecked_Conversion
     (gpr_base_node, Bare_Gpr_Node);

   function Wrap (Token : Token_Reference) return gpr_token;
   function Unwrap (Token : gpr_token) return Token_Reference;

   function Wrap_Private_File_Reader is new Ada.Unchecked_Conversion
     (Internal_File_Reader_Access, gpr_file_reader);
   function Unwrap_Private_File_Reader is new Ada.Unchecked_Conversion
     (gpr_file_reader, Internal_File_Reader_Access);

   function Wrap_Private_Event_Handler is new Ada.Unchecked_Conversion
     (Internal_Event_Handler_Access, gpr_event_handler);
   function Unwrap_Private_Event_Handler is new Ada.Unchecked_Conversion
     (gpr_event_handler, Internal_Event_Handler_Access);

   function Wrap_Private_Provider is new Ada.Unchecked_Conversion
     (Internal_Unit_Provider_Access, gpr_unit_provider);
   function Unwrap_Private_Provider is new Ada.Unchecked_Conversion
     (gpr_unit_provider, Internal_Unit_Provider_Access);

   function Convert is new Ada.Unchecked_Conversion
     (chars_ptr, System.Address);



end Gpr_Parser.Implementation.C;
